# openai_func_call

./: .gitignore  .pre-commit-config.yaml  404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/demo/: __main__.py  __main__old.py
src/openai_func_call/: __init__.py  function_parsing.py  manager.py
src/openai_funcpass/: __init__.py  assembly.py  manager.py
tests/: test_assembly.py
