[tool.poetry]
name = "openai-funcpass"
version = "0.1.0"
description = "Easily pass python functions to openai function calling."
authors = ["Jolo- <lockomoto@googlemail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "openai_funcpass", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.9"
docstring-parser = "^0.15"
case-converter = "^1.1.0"


[tool.poetry.group.dev.dependencies]
openai = "^0.27.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
